[package]
edition = "2021"
name    = "monkey_rs"
version = "0.1.0"

[lib]
name = "monkey_rs"
path = "src/lib.rs"

[[bin]]
name = "monkey_rs_repl"
path = "src/bin/repl/main.rs"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1"
